# password-vault

./: .dockerignore  AGENTS.md  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: adr.yml  research.yml  security-review.yml  task.yml
.github/workflows/: base-image-mirrors.yml  browser-static.yml  container.yml  docs.yml  helm.yml  load.yml  rust.yml  security.yml
crates/api/: Cargo.toml  build.rs
crates/api/src/: db.rs  lib.rs  main.rs  maintenance.rs  telemetry.rs  vault.rs
crates/api/src/auth/: encoding.rs  mod.rs  routes.rs  scram.rs  tokens.rs  totp.rs  transcript.rs
crates/api/static/: app.css  app.js  index.html
crates/api/tests/: migrations.rs
docs/: api-contract.md  architecture.md  auth-mfa-lifecycle.md  data-model.md  development.md  diagrams.md  feature-map.md  foundational-decisions.md  lock-unlock-state.md  mvp-implementation-plan.md  observability-sre-metrics.md  product-brief.md  sync-protocol.md  threat-model.md  whitepaper.md
docs/adr/: 0001-initial-product-direction.md  0002-backend-stack-rust.md  0003-auth-and-crypto-direction.md  0004-kubernetes-data-platform-direction.md  0005-mfa-session-and-csrf-policy.md  0006-browser-access-edge-routing.md
docs/agent-reports/: 2026-06-06-initial-architecture-analysis.md  2026-06-07-access-db-observability-auth-stabilization.md  2026-06-07-agent-coordination-api-first.md  2026-06-07-agent-workflow-waste-reduction-review.md  2026-06-07-auth-api-contract.md  2026-06-07-auth-mfa-contract.md  2026-06-07-auth-primitives.md  2026-06-07-auth-stack-followup.md  2026-06-07-auth-start-challenges.md  2026-06-07-browser-access-sre-stability-refresh.md  2026-06-07-browser-login-preview.md  2026-06-07-browser-preview-deploy.md  2026-06-07-browser-registration-kdf-gate.md  2026-06-07-current-stabilization-sre-review.md  2026-06-07-foundational-decisions-analysis.md  2026-06-07-mvp-execution-bootstrap.md  2026-06-07-opaque-spike.md  2026-06-07-platform-artifacts-observability.md  2026-06-07-postgres-schema-migrations.md  2026-06-07-postgresql-ha-migration-stability-review.md  2026-06-07-register-finish-foundation.md  2026-06-07-revision-freshness.md  2026-06-07-rust-api-scaffold.md  2026-06-07-session-csrf-foundation.md  2026-06-07-sre-golden-signals-observability-review.md  2026-06-07-stabilization-observability-access-review.md  2026-06-07-threat-model-v1.md  2026-06-07-totp-enrollment-foundation.md  2026-06-08-access-ci-networkpolicy-sre-refresh.md  2026-06-08-access-cnpg-sre-followup.md  2026-06-08-access-postgres-observability-stability-analysis.md  2026-06-08-browser-access-pgsql-sre-current-review.md  2026-06-08-browser-access-postgres-sre-migration-review.md  2026-06-08-build-info-and-runtime-stability-continuation.md  2026-06-08-ci-base-image-digest-pinning.md  2026-06-08-ci-path-filter-optimization.md  2026-06-08-cnpg-observability-runtime-rollout.md  2026-06-08-db-readiness-metrics-runtime-access.md  2026-06-08-full-synthetic-dashboard-event-counts.md  2026-06-08-grafana-argo-cnpg-sre-followup.md  (+7 more)
docs/decision-briefs/: 2026-06-07-auth-crypto-mvp.md  2026-06-07-client-roadmap.md  2026-06-07-github-workflow.md  2026-06-07-mvp-stabilization-routing-observability.md  2026-06-07-postgresql-ha-and-migrations.md  2026-06-07-postgresql-ha-backup.md  2026-06-07-web-ui-design-direction.md  2026-06-08-postgresql-ha-migrations-stability.md  2026-06-10-ghcr-base-image-mirrors.md  README.md
docs/research/: 2026-06-08-google-sre-observability-password-vault.md  2026-06-12-password-manager-competitor-ux-workflow-analysis.md  auth-crypto-v1-analysis.md  auth-login-protocol-options.md  cloudnativepg-platform-analysis.md  container-ci-observability-load-2026-06-07.md  (+8 more)
load/: README.md
migrations/: 202606070001_initial_schema.sql  202606070002_registration_key_material.sql  202606070003_browser_pbkdf2_profile.sql
(+30 files in other folders)
